Addresses and Invoices as entitybeans